Complete contact page and link to backend
1.  Contact page with form done
2. Implement sending data from form to mongodb
3. Improve UI of contact and aboutme pages

--- a/mern-app-backend/server/package.json
+++ b/mern-app-backend/server/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "mern-app-backend",
+  "type": "module",
+  "name": "server",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -11,7 +12,8 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mongoose": "^8.15.1"
+    "mongodb": "^6.17.0"
   }
 }
