--- a/mern-app-backend/server/package.json
+++ b/mern-app-backend/server/package.json
@@ -2,7 +2,7 @@
   "type": "module",
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,6 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mongodb": "^6.17.0"
+    "googleapis": "^149.0.0",
+    "mongodb": "^6.17.0",
+    "mongoose": "^8.15.1",
+    "nodemailer": "^7.0.3"
   }
 }
