--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -8,6 +8,8 @@
     "@mui/icons-material": "^7.1.1",
     "@mui/lab": "^7.0.0-beta.13",
     "@mui/material": "^7.1.1",
+    "@react-three/drei": "^10.1.2",
+    "@react-three/fiber": "^9.1.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -17,6 +19,7 @@
     "react-router-dom": "^7.6.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.3",
+    "three": "^0.177.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
