--- a/mern-app-backend/server/package.json
+++ b/mern-app-backend/server/package.json
@@ -14,7 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "form-data": "^4.0.4",
     "googleapis": "^149.0.0",
+    "mailgun.js": "^12.1.1",
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.1",
     "nodemailer": "^7.0.3"
